Page overflowing issue solved

--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,6 @@
 body {
   font-family: "main-font", sans-serif;
   background-color: #eee;
-  scroll-behavior: smooth;
   max-width: 100vw;
   overflow-x: hidden;
 
@@ -408,8 +407,8 @@ nav {
           img {
             display: none;
             opacity: 0;
-            width: 30px;
-            height: 30px;
+            width: clamp(1rem, 2vw, 2rem);
+            height: clamp(1rem, 2vw, 2rem);
             transition: all 3s ease-in-out;
           }
 
@@ -549,10 +548,15 @@ nav {
           margin-top: 1rem;
 
           > * {
-            width: clamp(1.5rem, 3vw, 2.5rem);
-            height: clamp(1.5rem, 3vw, 2.5rem);
+            width: clamp(1.8rem, 3vw, 2.5rem);
+            height: clamp(1.8rem, 3vw, 2.5rem);
             margin: 0 clamp(1rem, 1.5vw, 1.5rem);
-            font-size: clamp(0.5rem, 1.5vw, 1.5rem);
+            font-size: clamp(0.7rem, 1.5vw, 1.5rem);
+          }
+
+          img {
+            width: clamp(0.7rem, 1.5vw, 1.5rem);
+            height: clamp(0.7rem, 1.5vw, 1.5rem);
           }
         }
       }
@@ -591,6 +595,7 @@ nav {
 .projects {
   text-align: center;
   padding: clamp(1rem, 3vw, 2rem);
+  overflow: hidden;
 
   .project {
     padding: 0rem clamp(2rem, 4.5vw, 4rem);
@@ -925,6 +930,7 @@ nav {
   padding-top: 6rem;
   width: 100%;
   text-align: center;
+  overflow: hidden;
 
   h1::after {
     background-color: white !important;
